Notes from laptop

--- a/daily-notes/2025-09-29.md
+++ b/daily-notes/2025-09-29.md
@@ -1,6 +1,6 @@
 # Tasks
 - [x] Research Docker SAST
-- [ ] Apply CV feedback
+- [x] Apply CV feedback
 - [ ] Finalise cover letter
-- [ ] Shop for rain jacket
-- [ ] Cook dinner
+- [x] Shop for rain jacket
+- [x] Cook dinner
