Notes from laptop

--- a/daily-notes/2025-10-02.md
+++ b/daily-notes/2025-10-02.md
@@ -1,4 +1,5 @@
 # Tasks
 - [ ] Re-read Distributed Systems lecture 1
-- [ ] Look into Docker DAST
+- [x] Look into Docker DAST
+- [x] Work on HTTP server
 - [ ] Wash hair
