Notes from laptop

--- a/daily-notes/2025-09-30.md
+++ b/daily-notes/2025-09-30.md
@@ -1,5 +1,5 @@
 # Tasks
-- [ ] Finalise cover letter
+- [x] Finalise cover letter
 - [x] Email bio to Kirsty
 - [x] Work on HTTP server
-- [ ] Take out bins
+- [x] Take out bins
