--- a/daily-notes/2025-10-09.md
+++ b/daily-notes/2025-10-09.md
@@ -6,4 +6,4 @@
 - [ ] Do FP lab
 - [ ] Do Distributed Systems lab
 - [ ] Work on DAST proof of concept
-- [ ] Search for tent poles
+- [x] Search for tent poles
