Notes from laptop

--- a/daily-notes/2025-10-07.md
+++ b/daily-notes/2025-10-07.md
@@ -2,8 +2,8 @@
 - [x] Amazon Prime Day shopping
 - [x] Read FP lecture
 - [x] Do FP quiz
-- [ ] Work on DAST implementation
-	- [ ] Pick 2 tools
+- [x] Work on DAST implementation
+	- [x] Pick 2 tools
 	- [ ] Collect output from them
 	- [ ] Use Dive to locate the layer manually
 - [ ] Attend pole social
