--- a/daily-notes/2025-10-16.md
+++ b/daily-notes/2025-10-16.md
@@ -1,6 +1,6 @@
 # Tasks
 - [x] Attend Dist. Systems lecture
-- [ ] Read FP lecture
+- [x] Read FP lecture
 - [x] Do FP quiz
 - [x] Work on anniversary gift
 - [x] Attend Grafana presentation
