Notes from laptop

--- a/daily-notes/2025-10-24.md
+++ b/daily-notes/2025-10-24.md
@@ -11,10 +11,11 @@
 	- [ ] Look at Jessica's F1 repo for issues
 	- [x] Look into Giant Swam
 	- [x] Message a Giant Swarm recruiter mentioning the KubeEdge talk
-- [ ] Lecture notes
-	- [ ] Take notes on Health Tech lecture (ethics page 19 - 21)
-	- [ ] Read FP lecture
-	- [ ] Take notes on Distributed Systems lecture
+- [x] Lecture notes
+	- [x] Take notes on Health Tech lecture (ethics page 19 - 21)
+	- [x] Read FP lecture
+	- [x] Take notes on Distributed Systems lecture
+- [x] Do FP quiz
 - [ ] Do Distributed Systems lab
 - [ ] Look at Distributed Systems coursework
 
