Notes from laptop

--- a/daily-notes/2025-10-30.md
+++ b/daily-notes/2025-10-30.md
@@ -1,8 +1,8 @@
 # Tasks
 - [x] Attend Distributed Systems lecture
-- [ ] Find Docker images
-- [ ] Attend dissertation meeting
+- [x] Find Docker images
+- [x] Attend dissertation meeting
 - [ ] Read FP lecture
 - [ ] Do FP quiz
-- [ ] Work on anniversary gift
+- [x] Work on anniversary gift
 - [ ] Work on Distributed Systems assignment
